@@ -1,2 +1,5 @@
 -- Better subgroup placement with SchallCircuitGroup
 require("data-updates.schall-circuit-group")
+
+-- Move combinator recips to advanced circuit network tech, removes custom tech
+require("data-updates.tech-overhaul")
